# cbt_assistant

./: .pre-commit-config.yaml  Dockerfile.dev  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/api/: routes.py
backend/services/: generator.py
cbt_assistant/: pipeline.py
cbt_assistant/configuration/: templates.py  utils.py
cbt_assistant/data/: cbt_topics.txt
cbt_assistant/finetuning/:  evaluation.py  dataset.py  trainer.py  utils.py
cbt_assistant/ingestion/: parser.py  tokenizer.py  utils.py
cbt_assistant/llm/: models.py
cbt_assistant/rag/: document_store.py  embedder.py  pipeline.py  prompt_formatter.py  vector_store.py
cbt_assistant/semantic_filtering/: rejection.py  semantic_filters.py
tests/configs/: app_config.yaml
tests/scripts/: ingest_folder.py  model_response.py  run_model.py
