[project]
name = "cbt_assistant"
version = "0.1.0"
description = "Core logic for CBT Assistant: LLM + RAG + Fine-tuning framework"
authors = [{ name = "Yura", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cbt_assistant"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.py$'

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }